some of partial Divide and conquer examples

--- a/DsAlgoExamples/.settings/org.eclipse.core.resources.prefs
+++ b/DsAlgoExamples/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/leetCode/BurstBallons312.java=UTF-8
+encoding//src/leetCode/KthLargestElement215.java=UTF-8
+encoding//src/leetCode/MajorityElement169.java=UTF-8
 encoding//src/leetCode/MinimumPathSum64.java=UTF-8
